chore(corpus): harsh-critique quality sweep across all 101 skills and 124 agents (v6.13.20)
Read every skill and agent fresh, verified concrete claims against live
sources, and fixed real defects only: fabricated packages/CLIs/flags,
stale versions, dead cross-links, wrong regulatory citations, and
frontmatter/body self-contradictions. No fabricated content introduced.

The ask-me-questions canonical format skill was left unchanged: an
autonomous reword was reverted so the human owns that format.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>